Updates for content.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+<head>
+ <title>Blazegraph Documentation at Github</title>
+ <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/github-e64d783fc73cc815bb639b1ee740d83c08b1a72e2955dbd871b5971946f6f73d.css" integrity="sha256-5k14P8c8yBW7Y5se50DYPAixpy4pVdvYcbWXGUb29z0=" media="all" rel="stylesheet" />
+    <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/github2-d67e665a5adcb4911576562cbeb82c00d697b1f31e846c253fec048877a6b457.css" integrity="sha256-1n5mWlrctJEVdlYsvrgsANaXsfMehGwlP+wEiHemtFc=" media="all" rel="stylesheet" />
+</head>
+<body>
  <article class="markdown-body entry-content" itemprop="mainContentOfPage"><h2><a id="user-content-welcome-to-blazegraph" class="anchor" href="#welcome-to-blazegraph" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Blazegraph</h2>
 
 <p>Blazegraph™ is our ultra high-performance graph database supporting Blueprints and RDF/SPARQL APIs. It supports up to 50 Billion edges on a single machine and has a High Availability and Scale-out architecture. It is in production use for Fortune 500 customers such as EMC, Autodesk, and many others.  It powers the Wikimedia Foundation's Wiki Data Query Service.  See the latest <a href="http://www.blazegraph.com/product/">Feature Matrix</a>.</p>
@@ -25,4 +31,5 @@
 
 <p>Find an issue?   Need help?  See <a href="https://jira.blazegraph.com">JIRA</a> or purchase <a href="https://www.blazegraph.com/buy">Support</a>.</p>
 </article>
+</body>
 </html>
