--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <div id="readme" class="boxed-group clearfix announce instapaper_body md">
  <article class="markdown-body entry-content" itemprop="mainContentOfPage"><h2><a id="user-content-welcome-to-blazegraph" class="anchor" href="#welcome-to-blazegraph" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Blazegraph</h2>
 
-<p>Blazegraph™ DB is a ultra high-performance graph database supporting Blueprints and RDF/SPARQL APIs. It supports up to 50 Billion edges on a single machine. It is in production use for Fortune 500 customers such as EMC, Autodesk, and many others.  It is supporting key <a href ="https://www.syapse.com">Precision Medicine</a> applications and has wide-spread usage for life science applications.  It is used extensively to support Cyber anaytics in commercial and government applications.  It powers the Wikimedia Foundation's <a href = "https://query.wikidata.org/">Wikidata Query Service</a>.</p>
+<p>Blazegraph™ DB is a ultra high-performance graph database supporting Blueprints and RDF/SPARQL APIs. It supports up to 50 Billion edges on a single machine. It is in production use for Fortune 500 customers such as EMC, Autodesk, and many others.  It is supporting key <a href ="https://www.syapse.com">Precision Medicine</a> applications and has wide-spread usage for life science applications.  It is used extensively to support Cyber analytics in commercial and government applications.  It powers the Wikimedia Foundation's <a href = "https://query.wikidata.org/">Wikidata Query Service</a>.</p>
 
 <p><img src="images/blazegraph_logo.png"></p>
 
