--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
 <li><a href = "https://github.com/blazegraph/database">Blazegraph Database</a></li>
 <li><a href = "https://github.com/blazegraph/tinkerpop3">Tinkerpop3</a></li>
 <li><a href = "https://github.com/blazegraph/blazegraph-samples">Public Code Samples</a></li>
-<li><a href = "Python Client:  https://github.com/blazegraph/blazegraph-python">Blazegraph Python Client</a></li>
+<li><a href = "https://github.com/blazegraph/blazegraph-python">Blazegraph Python Client</a></li>
 <li><a href = "https://github.com/blazegraph/blazegraph-dotnetrdf">Blazegraph Dot Net RDF Client</a></li>
 </ul>
-
 
 <h3>Starting points:</h3>
 
