Updates to move to github downloads and support.

--- a/index.html
+++ b/index.html
@@ -37,18 +37,17 @@
 <ul>
 <li>Blazegraph Wiki:  <a href="https://wiki.blazegraph.com/">https://wiki.blazegraph.com/</a></li>
 <li>Blazegraph JIRA:  <a href="https://jira.blazegraph.com/">https://jira.blazegraph.com/</a></li>
-<li>Public Code Samples:  <a href="https://github.com/SYSTAP/blazegraph-samples">https://github.com/SYSTAP/blazegraph-samples</a></li>
+<li>Public Code Samples:  <a href="https://github.com/blazegraph/blazegraph-samples">https://github.com/blazegraph/blazegraph-samples</a></li>
 <li>Whitepaper: <a href="docs/bigdata_architecture_whitepaper.pdf">Bigdata Architecture Whitepaper</a></li>
 </ul>
 
 <h3>Download Blazegraph</h3>
 <p>You can choose an executable jar, war file, or tar.gz distribution.</p>
-<p>After you've downloaded it, checkout out our <a href="https://wiki.blazegraph.com/wiki/index.php/Quick_Start">quick start guide</a> and <a href="https://github.com/SYSTAP/blazegraph-samples">sample applications</a>. Once you've started development, the Blazegraph Community is the best way for us to assist in your design and development. Support is available via the <a href="https://sourceforge.net/p/bigdata/mailman/bigdata-developers/">mailing list</a> and JIRA i<a href="https://jira.blazegraph.com/">ssue tracker.</a>
-<p><a href="https://sourceforge.net/projects/bigdata/files/bigdata/2.1.5/blazegraph.jar/download" rel="nofollow"><img class="aligncenter" src="https://a.fsdn.com/con/app/sf-download-button" alt="Download Blazegraph (powered by bigdata)"></p>
-<p><img src="https://img.shields.io/sourceforge/dw/bigdata.svg" alt="Downloads per Week"></a></p>
+<p>After you've downloaded it, checkout out our <a href="https://wiki.blazegraph.com/wiki/index.php/Quick_Start">quick start guide</a> and <a href="https://github.com/SYSTAP/blazegraph-samples">sample applications</a>. Once you've started development, the Blazegraph Community is the best way for us to assist in your design and development. Support is available via the <a href="https://github.com/blazegraph/database/issues">Github Issues</a> and JIRA i<a href="https://jira.blazegraph.com/">ssue tracker.</a>
+<p><a href="https://github.com/blazegraph/database/releases/latest" rel="nofollow">Download Blazegraph</a></p>
+<p><img src="https://img.shields.io/github/downloads/blazegraph/database/total.svg"/></p>
 
-
-<p>Find an issue?   Need help?  See <a href="https://jira.blazegraph.com">JIRA</a></p>
+<p>Find an issue?   Need help?  See <a href="https://github.com/blazegraph/database/issues">JIRA</a></p>
 </article>
 </div>
 </body>
