Removed cross-origin css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
  <link rel="icon"
       type="image/png"
       href="favicon.ico" />
- <title>Blazegraph Documentation at Github</title>
- <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/github-e64d783fc73cc815bb639b1ee740d83c08b1a72e2955dbd871b5971946f6f73d.css" integrity="sha256-5k14P8c8yBW7Y5se50DYPAixpy4pVdvYcbWXGUb29z0=" media="all" rel="stylesheet" />
-    <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/github2-d67e665a5adcb4911576562cbeb82c00d697b1f31e846c253fec048877a6b457.css" integrity="sha256-1n5mWlrctJEVdlYsvrgsANaXsfMehGwlP+wEiHemtFc=" media="all" rel="stylesheet" />
+      <title>Blazegraph Database</title>
 </head>
 <body>
  <div id="readme" class="boxed-group clearfix announce instapaper_body md">
