--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <h3>Starting points:</h3>
 
 <ul>
-<li>Blazegraph Wiki:  <a href="https://wiki.blazegraph.com/">https://wiki.blazegraph.com/</a></li>
+<li>Blazegraph Wiki:  <a href="https://github.com/blazegraph/database/wiki">https://github.com/blazegraph/database/wiki</a></li>
 <li>Blazegraph JIRA:  <a href="https://jira.blazegraph.com/">https://jira.blazegraph.com/</a></li>
 <li>Public Code Samples:  <a href="https://github.com/blazegraph/blazegraph-samples">https://github.com/blazegraph/blazegraph-samples</a></li>
 <li>Whitepaper: <a href="docs/bigdata_architecture_whitepaper.pdf">Bigdata Architecture Whitepaper</a></li>
@@ -45,7 +45,7 @@
 <p><a href="https://github.com/blazegraph/database/releases/latest" rel="nofollow">Download Blazegraph</a></p>
 <p><img src="https://img.shields.io/github/downloads/blazegraph/database/total.svg"/></p>
 
-<p>Find an issue?   Need help?  See <a href="https://github.com/blazegraph/database/issues">JIRA</a></p>
+<p>Find an issue?   Need help?  See <a href="https://jira.blazegraph.com/">JIRA</a></p>
 </article>
 </div>
 </body>
